Setup HTTPS support. Update documentations accordingly.

--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ APP_SECRET=141d460b2d7d75b1e3c2f4841d7a689a
 ###< symfony/framework-bundle ###
 
 NGINX_PORT=8000
+NGINX_SECURE_PORT=443
 MYSQL_PORT=3000
 MYSQL_ROOT_PASSWORD=megasecret
 MYSQL_DB_NAME=securestorage
