--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,12 @@ services:
         image: nginx:1.15.0
         ports:
             - 127.0.0.1:${NGINX_PORT}:80
+            - 127.0.0.1:${NGINX_SECURE_PORT}:443
         volumes:
             - .:/app:cached
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:cached
+            - ./docker/nginx/secure-storage.localhost.pem:/etc/nginx/secure-storage.localhost.pem
+            - ./docker/nginx/secure-storage.localhost-key.pem:/etc/nginx/secure-storage.localhost-key.pem
         container_name: securestorage_nginx
 
     mysql:
