--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,6 +2,11 @@ server {
     listen 80;
     server_name secure-storage.localhost;
 
+    listen 443 ssl http2;
+    server_name secure-storage.localhost default_server;
+    ssl_certificate secure-storage.localhost.pem;
+    ssl_certificate_key secure-storage.localhost-key.pem;
+
     index index.php index.html;
     root /app/public;
 
