--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,5 +1,5 @@
 controllers:
-    resource: ../../src/Controller/
+    resource: ../../src/Infrastructure/Api/Controller/
     type: annotation
 
 kernel:
