--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "nelmio/api-doc-bundle": "^3.0",
         "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
@@ -15,7 +17,10 @@
         "symfony/security-core": "5.1.*",
         "symfony/security-guard": "5.1.*",
         "symfony/security-http": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/twig-bundle": "5.1.*",
+        "symfony/yaml": "5.1.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
@@ -65,7 +70,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.1.*"
         }
     }
