--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.5",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/maker-bundle": "^1.19",
         "symfony/test-pack": "^1.0"
