--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,7 @@ security:
             provider: app_user_provider
             logout:
                 path: logout
+                target: /home
             json_login:
                 check_path: /login
 
