Redirect all HTTP requests to HTTPS.

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,9 +1,12 @@
 server {
     listen 80;
     server_name secure-storage.localhost;
+    return 308 https://$server_name$request_uri;
+}
 
+server {
     listen 443 ssl http2;
-    server_name secure-storage.localhost default_server;
+    server_name secure-storage.localhost;
     ssl_certificate secure-storage.localhost.pem;
     ssl_certificate_key secure-storage.localhost-key.pem;
 
