--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,7 @@ services:
     App\Infrastructure\Api\Controller\:
         resource: '../src/Infrastructure/Api/Controller'
         tags: ['controller.service_arguments']
+        public: true
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
