--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "nelmio/api-doc-bundle": "^3.0",
         "sensio/framework-extra-bundle": "^5.5",
+        "squizlabs/php_codesniffer": "*",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
